<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vetealinfierno.locus.AccountCreationActivity">

    <EditText
        android:id="@+id/editText_cPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText_cEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegistrationTitle"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/title_accountCreation_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/RegistrationTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/editText_cEmail" />

    <Button
        android:id="@+id/submit_btn"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/textView_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/submitBtn_text"
        android:textSize="20sp" />

    <TextView
        android:layout_marginStart="100dp"
        android:textAlignment="center"
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBrightBlue"
        android:text="@string/existingUserLink_text"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_below="@+id/RegistrationTitle"
        android:layout_marginStart="16dp"
        android:text="@string/subtitle_emailField_text" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="13dp"
        android:text="@string/subtitle_passwordField_text"
        android:layout_below="@+id/editText_cEmail"
        android:layout_alignStart="@+id/textView8" />

    <Spinner
        android:id="@+id/spinner_usertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/types"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toEndOf="@+id/textView10" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/textView_message"
        android:background="@color/colorBrightBlue"
        android:layout_alignEnd="@+id/textView_message"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/subtitle_userTypeQuestion_text"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/submit_btn"
        android:layout_alignStart="@+id/textView9" />
</RelativeLayout>
