<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vetealinfierno.locus.LoginActivity">

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/loginTitle_text" />

    <EditText
        android:id="@+id/editText_email_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/LoginTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/editText_email_login"
        android:layout_alignStart="@+id/editText_email_login" />

    <Button
        android:id="@+id/signIn_btn_login"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/editText_password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/signInBtn_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_SignUp_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUserLink_text"
        android:textColor="@color/colorBrightBlue"
        android:textAlignment="center"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/signIn_btn_login"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/textView_SignUp_login"
        android:background="@color/colorBrightBlue"
        android:layout_alignEnd="@+id/textView_SignUp_login"
        android:layout_alignStart="@+id/textView_SignUp_login" />


</RelativeLayout>
